Details
-
Type:
Bug
-
Status: Closed
-
Priority:
P1: Critical
-
Resolution: Done
-
Affects Version/s: 5.12.1
-
Fix Version/s: 5.12.3, 5.13.1, 5.14.0 Alpha
-
Component/s: Quick: Core Declarative QML
-
Labels:None
-
Environment:Windows 10
-
Platform/s:
-
Commits:042f2b67739439c020451843d887d131d5f9cbdc (qt/qtdeclarative/5.12)
Description
On my Windows system doing a 2-finger gesture (pinch) the appliction crashes.
It seems pointById(touchMouseId) called by deliverPressOrReleaseEvent() returns a nullptr which has no guard
Here ist the stack:
Qt5Quickd.dll!QQuickEventPoint::grabberPointerHandler() Line 879 C++ Qt5Quickd.dll!QQuickWindowPrivate::deliverPressOrReleaseEvent(QQuickPointerEvent * event, bool handlersOnly) Line 2530 C++ Qt5Quickd.dll!QQuickWindowPrivate::deliverTouchEvent(QQuickPointerTouchEvent * event) Line 2435 C++ Qt5Quickd.dll!QQuickWindowPrivate::deliverPointerEvent(QQuickPointerEvent * event) Line 2356 C++ Qt5Quickd.dll!QQuickWindowPrivate::handleTouchEvent(QTouchEvent * event) Line 2136 C++ Qt5Quickd.dll!QQuickWindow::event(QEvent * e) Line 1597 C++ Qt5Cored.dll!QCoreApplicationPrivate::notify_helper(QObject * receiver, QEvent * event) Line 1220 C++ Qt5Cored.dll!doNotify(QObject * receiver, QEvent * event) Line 1150 C++ Qt5Cored.dll!QCoreApplication::notify(QObject * receiver, QEvent * event) Line 1137 C++ Qt5Guid.dll!QGuiApplication::notify(QObject * object, QEvent * event) Line 1792 C++ Qt5Cored.dll!QCoreApplication::notifyInternal2(QObject * receiver, QEvent * event) Line 1060 C++ Qt5Cored.dll!QCoreApplication::sendSpontaneousEvent(QObject * receiver, QEvent * event) Line 1463 C++ Qt5Guid.dll!QGuiApplicationPrivate::processTouchEvent(QWindowSystemInterfacePrivate::TouchEvent * e) Line 2866 C++ Qt5Guid.dll!QGuiApplicationPrivate::processWindowSystemEvent(QWindowSystemInterfacePrivate::WindowSystemEvent * e) Line 1847 C++ Qt5Guid.dll!QWindowSystemInterface::sendWindowSystemEvents(QFlags<enum QEventLoop::ProcessEventsFlag> flags) Line 1077 C++ qwindowsd.dll!QWindowsGuiEventDispatcher::sendPostedEvents() Line 83 C++ Qt5Cored.dll!qt_internal_proc(HWND__ * hwnd, unsigned int message, unsigned __int64 wp, __int64 lp) Line 247 C++ [External Code] Qt5Cored.dll!QEventDispatcherWin32::processEvents(QFlags<enum QEventLoop::ProcessEventsFlag> flags) Line 640 C++ qwindowsd.dll!QWindowsGuiEventDispatcher::processEvents(QFlags<enum QEventLoop::ProcessEventsFlag> flags) Line 74 C++ Qt5Cored.dll!QEventLoop::processEvents(QFlags<enum QEventLoop::ProcessEventsFlag> flags) Line 139 C++ Qt5Cored.dll!QEventLoop::exec(QFlags<enum QEventLoop::ProcessEventsFlag> flags) Line 225 C++ Qt5Cored.dll!QCoreApplication::exec() Line 1363 C++ Qt5Guid.dll!QGuiApplication::exec() Line 1780 C++
Attachments
Issue Links
- is duplicated by
-
QTBUG-74743 Crash triggered by QQuickWindowPrivate::deliverPressOrReleaseEvent
-
- Closed
-
- relates to
-
QTBUG-73741 [REG 5.11-5.12.0] Android: crashes in QuickEventPoint::grabberItemEv
-
- Closed
-
-
QTBUG-72893 [REG: 5.11.3->5.12.0] Random crash in QQuickEventPoint::grabberItem
-
- Closed
-
- resulted from
-
QTBUG-70998 [REG] Map + MouseArea double multi-touch problem
-
- Closed
-